# -

./: requirements.txt
doc_converter/: .env.example  README.md  pyproject.toml
doc_converter/doc_converter/: __init__.py  cli.py  config.py  ir.py  metadata.py  router.py
doc_converter/doc_converter/converters/: base.py  docx_converter.py  image_converter.py  pdf_converter.py  xlsx_converter.py
doc_converter/doc_converter/converters/pdf/: pymupdf_utils.py  table_heuristics.py
doc_converter/doc_converter/image_pipeline/: __init__.py  classifier.py  diagram_extractor.py  mermaid.py  processor.py  prompts.py  table_extractor.py
doc_converter/doc_converter/renderers/: __init__.py  html_renderer.py  markdown_renderer.py
doc_converter/doc_converter/renderers/templates/: document.html.j2
doc_converter/doc_converter/utils/: __init__.py  markdown_parser.py
doc_converter/doc_converter/vlm/: __init__.py  base.py  factory.py  mock_backend.py
src/: config.toml  dedup.py  itext2kg_concepts.py  itext2kg_graph.py  refiner_longrange.py  slicer.py
src/prompts/: itext2kg_concepts_extraction_comm_v2-core-principles.md  itext2kg_graph_extraction.md  refiner_longrange_bw.md  refiner_longrange_fw.md
src/schemas/: ConceptDictionary.schema.json  ConceptDictionary.schema_EXAMPLE.json  LearningChunkGraph.schema.json  LearningChunkGraphNORNIKEL.schema.json  LearningChunkGraphNORNIKEL_EXAMPLE.json
src/utils/: __init__.py  config.py  console_encoding.py  exit_codes.py  llm_client.py  (+6 more)
tests/: test_itext2kg_concepts.py  test_itext2kg_graph.py
viz/: graph2html.py  graph2metrics.py  graph2viewer.py  graph_fix.py
web/: README.md  config.default.json  package.json  run_with_config.py  settings.json  webapp.config.json
(+68 files in other folders)
